--- a/ML_task_1.ipynb
+++ b/ML_task_1.ipynb
@@ -4348,7 +4348,7 @@
      "output_type": "stream",
      "text": [
       "Ошибка на обучающей выборке: 0.0\n",
-      "Ошибка на тестовой выборке: 0.2948453608247423\n"
+      "Ошибка на тестовой выборке: 0.2907216494845361\n"
      ]
     }
    ],
@@ -4383,7 +4383,7 @@
      "output_type": "stream",
      "text": [
       "Ошибка на обучающей выборке: 0.0\n",
-      "Ошибка на тестовой выборке: 0.29175257731958765\n"
+      "Ошибка на тестовой выборке: 0.2958762886597938\n"
      ]
     }
    ],
@@ -4714,7 +4714,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x24497e9f280>"
+       "<matplotlib.legend.Legend at 0x1fe03f4ea60>"
       ]
      },
      "execution_count": 49,
@@ -4843,7 +4843,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x24497f71a00>"
+       "<matplotlib.legend.Legend at 0x1fe040eb040>"
       ]
      },
      "execution_count": 54,
@@ -4887,7 +4887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b90e641",
+   "id": "667ea277",
    "metadata": {},
    "source": [
     "### 10. Борьба с несбалансированностью "
@@ -4895,7 +4895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b729e9a3",
+   "id": "42b6c221",
    "metadata": {},
    "source": [
     "Посмотрим на количество представителей каждого класса:"
@@ -4904,7 +4904,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "303b85bd",
+   "id": "c764112d",
    "metadata": {},
    "outputs": [
     {
@@ -4931,7 +4931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91566a67",
+   "id": "620c87fb",
    "metadata": {},
    "source": [
     "Попробуем побороться с несбалансированностью классов путем их объединения.\n",
@@ -4942,7 +4942,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "47da2165",
+   "id": "12604da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4958,7 +4958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4da8347",
+   "id": "57dfb6fc",
    "metadata": {},
    "source": [
     "Процентное соотношение классов стало следующим:"
@@ -4966,8 +4966,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "0db7a977",
+   "execution_count": 57,
+   "id": "f45e4365",
    "metadata": {},
    "outputs": [
     {
@@ -4988,7 +4988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4688fc0",
+   "id": "1a4ef3db",
    "metadata": {},
    "source": [
     "Это соотношение классов намного лучше, чем было раньше."
@@ -4996,7 +4996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8700ad62",
+   "id": "ddf7c99f",
    "metadata": {},
    "source": [
     "### 11. Исключение коррелировнных переенных"
@@ -5004,7 +5004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841630e4",
+   "id": "465e2e4c",
    "metadata": {},
    "source": [
     "Как было определено ранее, некоторые признаки коррелируют друг с другом:\n",
@@ -5020,8 +5020,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "8f99fce0",
+   "execution_count": 58,
+   "id": "716f07c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5030,8 +5030,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "35b332b3",
+   "execution_count": 59,
+   "id": "d425258f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5042,8 +5042,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "1ced3733",
+   "execution_count": 60,
+   "id": "f8817f0d",
    "metadata": {},
    "outputs": [
     {
@@ -5070,7 +5070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30de2a07",
+   "id": "868b15c4",
    "metadata": {},
    "source": [
     "### 9.2 Другие классификаторы"
@@ -5078,7 +5078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e3721b",
+   "id": "c52f72ae",
    "metadata": {},
    "source": [
     "### SVC"
@@ -5086,8 +5086,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "5969a82d",
+   "execution_count": 61,
+   "id": "ae329c8d",
    "metadata": {},
    "outputs": [
     {
@@ -5113,7 +5113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43cc3c5b",
+   "id": "e421a1b9",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -5121,8 +5121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "3610ecb0",
+   "execution_count": 62,
+   "id": "3e35fba0",
    "metadata": {},
    "outputs": [
     {
@@ -5148,7 +5148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ea8350",
+   "id": "461bad2d",
    "metadata": {},
    "source": [
     "### Extremely Randomized Trees"
@@ -5156,8 +5156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "67f7c353",
+   "execution_count": 67,
+   "id": "258765da",
    "metadata": {},
    "outputs": [
     {
@@ -5165,7 +5165,7 @@
      "output_type": "stream",
      "text": [
       "Ошибка на обучающей выборке: 0.0\n",
-      "Ошибка на тестовой выборке: 0.14432989690721648\n"
+      "Ошибка на тестовой выборке: 0.1360824742268041\n"
      ]
     }
    ],
@@ -5181,7 +5181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9097a07",
+   "id": "aa137f4b",
    "metadata": {},
    "source": [
     "### GBT"
@@ -5189,8 +5189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "860ffac4",
+   "execution_count": 64,
+   "id": "d4a698e9",
    "metadata": {},
    "outputs": [
     {
@@ -5198,7 +5198,7 @@
      "output_type": "stream",
      "text": [
       "Ошибка на обучающей выборке: 0.0773711997087202\n",
-      "Ошибка на тестовой выборке: 0.19484536082474227\n"
+      "Ошибка на тестовой выборке: 0.1958762886597938\n"
      ]
     }
    ],
@@ -5227,17 +5227,17 @@
    "id": "93cfbda8",
    "metadata": {},
    "source": [
-    "С помощью классификатора \"Extremely Randomized Trees\" удалось понизить ошибку на тестовой выборке до 0.144.\n",
+    "С помощью классификатора \"Extremely Randomized Trees\" удалось понизить ошибку на тестовой выборке до 0.136.\n",
     "\n",
     "После того, как мы поборолись с несбалансированностью классов и избавились от коррелированных переменных, удалось понизить ошибку на кросс-валидации с 0.382 до 0.225.\n",
     "\n",
-    "Качество вина оценивалось людьми на основе их ощущений, а не строго на физико-химических свойствах самого вина. Несмотря на то, что некоторые свойства(признаки) отражаются во вкусе вина, они влияют на оценку качества опосредованно. Сильной корреляции(>0.8) между признаками и качеством вина не наблюдалось. Ошибка классификации осталась достаточно большой (0.144)."
+    "Качество вина оценивалось людьми на основе их ощущений, а не строго на физико-химических свойствах самого вина. Несмотря на то, что некоторые свойства(признаки) отражаются во вкусе вина, они влияют на оценку качества опосредованно. Сильной корреляции(>0.8) между признаками и качеством вина не наблюдалось. Ошибка классификации осталась достаточно большой (0.136)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12ed04b1",
+   "id": "b3616736",
    "metadata": {},
    "outputs": [],
    "source": []
